--- a/11-12-25/index.html
+++ b/11-12-25/index.html
@@ -16,7 +16,8 @@
 <h2>Welcome to SmartShop</h2>
 <p>Best deals on electronics, clothes, and more!</p>
 <p>Welcome again to our shop</p>
-
+<p>Welcome again to our shop</p>
+    
 <div class="banner">Big Sale 50% OFF</div>
 
 </body>
